fixed padding-bottom spacing in header of /book page

--- a/src/app/components/Book-Page-Content/Book-Page-Content.module.scss
+++ b/src/app/components/Book-Page-Content/Book-Page-Content.module.scss
@@ -197,7 +197,14 @@
 .afterPay {
   display: inline-flex;
   justify-content: flex-start;
-  flex: 1;
+  align-items: center;
+  height: 1em;
+  font-size: .9em;
+}
+
+.learnMore {
+  color: #2466b8;
+  text-decoration: underline;
 }
 
 .bookRewards {
